# ai-security-plugins

./: .gitignore  README.md
plugins/security-compliance/: .gitignore  EVAL_METHODOLOGY.md  LICENSE  README.md  pyproject.toml
plugins/security-compliance/.claude-plugin/: plugin.json
plugins/security-compliance/agents/: security-auditor.md
plugins/security-compliance/commands/: compliance-check.md  compliance-eval.md  edit-docx.md  spot-check.md
plugins/security-compliance/data/: framework_index.json
plugins/security-compliance/hooks/: check_dependencies.py  hooks.json  resolve_frameworks.py  validate_compliance_output.py  validate_edited_docx.py
plugins/security-compliance/scripts/: _cowork_setup.sh  _docx_accept_inmemory.py  _docx_batch.py  _docx_graft.py  _docx_inject.py  _docx_select_accept.py  _docx_validate.py  _docx_versions.py  build_docx_summary.py  build_evidence_ledger.py  edit_docx.py  matching.py  run_eval.py  score_eval.py  select_framework_versions.py  validate_report.py
plugins/security-compliance/skills/compliance-guidance/: SKILL.md
plugins/security-compliance/tests/: conftest.py  test_edit_docx_accept_changes.py  test_edit_docx_apply_template.py  test_k1_accept_inmemory.py  test_k2_batch.py  test_k3_select_accept.py  test_k4_inject.py
plugins/security-compliance/tests/config/: eval-config.example.json
plugins/security-compliance/tests/fixtures/: _build_acme_template.py  _build_corrupt_template.py  _build_plain_summary.py  _build_reviewer_marked.py  acme_template.docx  corrupt_template.docx  plain_summary.docx  reviewer_marked.docx  (+1 more)
(+30 files in other folders)
